<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="amount">Amount</string>
  <string name="cancel">Cancel</string>
  <string name="accept">Accept</string>
  <string name="chargecode">Charge Code</string>
  <string name="chargeminitix">Charge MiniTix</string>
  <string name="chargewallet">Charge Wallet</string>
  <string name="confirm">Confirm</string>
  <string name="confirmationcode">Confirmation Code</string>
  <string name="creditcard">Credit Card</string>
  <string name="creditcardnumber">Credit Card number</string>
  <string name="cvccode">CVC Code</string>
  <string name="done">Done</string>
  <string name="emailaddress">E-mail Address</string>
  <string name="confirmationcodemessage">An SMS containing a verification code has been sent to %1$s. Enter the code to complete the registration.</string>
  <string name="passwordconfirmationcodemessage">An SMS has been sent to %1$s containing a verification code, please use this code to reset your password.</string>
  <string name="email">Email</string>
  <string name="expirationdate">Expiration Date (MM/YY)</string>
  <string name="fillconfirmationcode">Fill your verification code received in your phone</string>
  <string name="go">Go</string>
  <string name="chargecarddescription">Here you can charge your MiniTix wallet. Enter the code from a MyOrder charge card below.</string>
  <string name="ideal">iDEAL</string>
  <string name="termscondition">I accept the terms of</string>
  <string name="and">and</string>
  <string name="yes">Yes</string>
  <string name="activationcodequestion">We will send you an SMS.\n Fill in the received activation code.\n\n%1$s\n\n Is this the correct phone number?</string>
  <string name="login">Login</string>
  <string name="minitix">Minitix</string>
  <string name="myorder">MyOrder</string>
  <string name="next">Next</string>
  <string name="remember">Remember:</string>
  <string name="pay">Pay</string>
  <string name="creditcarddescription">Pay using your Visa or Mastercard. You can also use your credit card to put money safely in your MiniTix wallet of Rabobank</string>
  <string name="minitixdescription">Pay your order directly from your app with your MiniTix wallet from Rabobank. Safe and fast payment!</string>
  <string name="newpassword">Please create a new password</string>
  <string name="selectbank">Please select your bank</string>
  <string name="transactions">Transactions</string>
  <string name="lblreturn">Return</string>
  <string name="scancreditcard">Scan your credit card</string>
  <string name="choosecreditcard">Choose your credit card</string>
  <string name="search">Search</string>
  <string name="mobilenumber">Mobile number</string>
  <string name="wrongpasswordlength">The password you have chosen is not long enough.</string>
  <string name="passwordnotmatch">The two passwords are not identical.</string>
  <string name="paypaldescription">Use your PayPal account to pay for orders. You only have to login once. Also, PayPal can be used to put money safely in your MiniTix wallet of Rabobank</string>
  <string name="bankaccounterror">User does not have a bank account linked to its MiniTix wallet. Please, make an iDEAL transaction first</string>
  <string name="verificationcode">Verification code</string>
  <string name="verify">Verify</string>
  <string name="registerinfotext">Fill in your phone number, including landcode. Example: +31600000000.</string>
  <string name="passwordrepeat">Password repeat</string>
  <string name="passwordforgotten">Password forgotten</string>
  <string name="password">Password</string>
  <string name="amounttopay">Amount to pay</string>
  <string name="payment">Payment</string>
  <string name="wallet">Wallet</string>
  <string name="mywallet">My Wallet</string>
  <string name="paywith">Pay with</string>
  <string name="selectdifferentpaymenttype">Or choose another payment method</string>
  <string name="loadyourwallet">Load your wallet</string>
  <string name="moreoptions">More options</string>
  <string name="datanotaccepted">Your data is not accepted</string>
  <string name="idealdescription">With iDEAL you directly debit from your bank account. Also, iDEAL can be used to put money safely in your MiniTix wallet of Rabobank</string>
  <string name="topupcarddescription">With MyOrder top-up card, you can easily put money in your MiniTix wallet of Rabobank</string>
  <string name="otadescription">With One Time Authorization you directly debit from your previously used bank account. Also, One Time Authorization can be used to put money safely in your MiniTix wallet of Rabobank</string>
  <string name="transactioncancelled">Your transaction was cancelled</string>
  <string name="transactionfailed">Your transaction failed</string>
  <string name="transactionexpired">Your transaction expired</string>
  <string name="paymentinformation">Payment information</string>
  <string name="successful">Successful</string>
  <string name="inprogress">In progress</string>
  <string name="failed">Failed</string>
  <string name="linkpaymentkey">Link your Payment key</string>
  <string name="payfriends">Pay your friends</string>
  <string name="mobilenumberid">Enter 06 number or MyOrder ID</string>
  <string name="payfriendstitle">Pay your friends with saldo from your wallet</string>
  <string name="data">Data</string>
  <string name="definition">Definition</string>
  <string name="fillindetailshere">Fill in your details here</string>
  <string name="choosemobilenumber">Choose a mobile number</string>
  <string name="mobilenumbernotfound">No valid mobile phone number found for this person.</string>
  <string name="emailverification">Email verification</string>
  <string name="registeracceptconditionsolder18">I am older than 18 years</string>
  <string name="enterbankaccountnumber">Enter your bank account number</string>
  <string name="sepaauthorization">Sepa authorization</string>
  <string name="chargecardsuccessmessage">Charge complete. €%.2f has been added to your wallet.</string>
  <string name="automaticcharge">Automatic charge</string>
  <string name="perweek">Per week</string>
  <string name="permonth">Per month</string>
  <string name="automaticchargeconfigheader">Choose max. amount per period</string>
  <string name="selectamount">Select amount</string>
  <string name="selectperiod">Select period</string>
  <string name="usedsavedcard">Use your saved card</string>
  <string name="products">Products</string>
  <string name="totalprice">Total price</string>
  <string name="ota">Direct debit</string>
  <string name="chargecard">Charge card</string>
  <string name="orderpaymentkey">Order your Payment key</string>
  <string name="automaticchargecomplete">Automatic charge complete</string>
  <string name="emailverificationcompleted">Email verification completed</string>
  <string name="payfriendscompleted">Pay your friends completed</string>
  <string name="paymentcompleted">Payment is completed</string>
  <string name="chargecompleted">Charge is completed</string>
  <string name="mycashless">MyCashless</string>
  <string name="poweredby">Powered by</string>
  <string name="loading">Loading</string>
  <string name="coupons">Coupons</string>
  <string name="loyaltycredits">Loyalty/Credits</string>
  <string name="ibannotvalid">IBAN is not valid</string>
  <string name="bankrequired">Bank is required</string>
  <string name="amountrequired">Amount is required</string>
  <string name="missingtomobilenumber">Missing destination number</string>
  <string name="verificationcodeincorrect">Verification code is incorrect.</string>
  <string name="accepttermsconditions">Accept terms and conditions to continue</string>
  <string name="register">Register</string>
  <string name="withdrawwallet">Withdraw From Wallet</string>
  <string name="withdrawwalletcompleted">Withdraw from Wallet completed</string>
  <string name="useralreadyexits">User already exists. Do you want to change the password?</string>
  <string name="usernotexist">User does not exist. Do you want to register?</string>
  <string name="paymentdate">Betaaldatum</string>
  <string name="registerolder18error">You have to be older than 18 year for direct charging.</string>
  <string name="lasttransactions">Last transactions</string>
  <string name="manualreloadinfo">Enter the amount you want to charge from your bank account.</string>
  <string name="minitixconfirmation">Are you sure you want to pay?</string>
  <string name="requiredfield">Missing required field</string>
  <string name="cameranotavailable">Your camera is nor available</string>
  <string name="systemerror">Loading failed. System error</string>
  <string name="orderid">Order</string>
  <string name="ok">OK</string>
  <string name="bankaccountlabel">Bank Account</string>
  <string name="code">Code</string>
  <string name="emailvalidation">Please provide the valid email address</string>
  <string name="userpasswordempty">Please provide the phone number/ Password</string>
  <string name="lblagreeota">I agree with this one-time authorization</string>
  <string name="msgcontactaccessdenied">Access denied for contact</string>
  <string name="card">Charge card</string>
  <string name="paypal">PayPal</string>
  <string name="amountforwithdraw">Enter the amount you want to transfer to your bank account.</string>
  <string name="withdraw">Withdraw</string>
  <string name="lblrequiredfield">Missing required field</string>
  <string name="phonerequired">Phone required</string>
  <string name="detailsrequired">Description field is empty</string>

</resources>