<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  style="@style/FragmentStyle"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:padding="10dp">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dip"
    android:layout_marginTop="10dip"
    android:text="@string/fillconfirmationcode" />

  <EditText
    android:id="@+id/confirmation_code"
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_textbox_height"
    android:cursorVisible="true"
    android:enabled="true"
    android:hint="@string/confirmationcode"
    android:inputType="textCapCharacters"></EditText>

  <Button
    android:id="@+id/confirm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:padding="10dp"
    android:text="@string/confirm" />

</LinearLayout>