<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  style="@style/FragmentStyle"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/manualreloadinfo" />

    <EditText
      android:id="@+id/amountView"
      style="@style/AmountEditText"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:singleLine="true" />

    <TextView
      style="@style/SeparatorText"
      android:layout_marginTop="16dp"
      android:text="@string/bankaccountlabel" />

    <TextView
      android:id="@+id/bankAccountCheckView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/enterbankaccountnumber" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="5">

      <EditText
        android:id="@+id/iBanPrefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        android:background="@color/light_grey_color"
        android:enabled="false"
        android:inputType="text"
        android:singleLine="true" />

      <EditText
        android:id="@+id/bankAccountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:inputType="number"
        android:singleLine="true" />
    </LinearLayout>


    <CheckBox
      android:id="@+id/morethan18checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginTop="16dp"
      android:button="@null"
      android:drawableRight="@drawable/remember_pwd_state"
      android:text="@string/registeracceptconditionsolder18" />

    <Button
      android:id="@+id/okButton"
      style="@style/DefaultButton"
      android:layout_width="match_parent"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="16dp"
      android:text="@string/chargewallet" />
  </LinearLayout>

</ScrollView>