<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/registration_popup_background"
  android:padding="5dip">


  <LinearLayout
    android:id="@+id/mandate_btn_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:weightSum="2">

    <Button
      android:id="@+id/mandate_btn_cancel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginRight="5dip"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/cancel" />

    <Button
      android:id="@+id/mandate_btn_accept"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/accept" />
  </LinearLayout>

  <CheckBox
    android:id="@+id/checkbox_agree_ota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/mandate_btn_layout"
    android:layout_gravity="left"
    android:layout_marginTop="8dp"
    android:button="@null"
    android:drawableRight="@drawable/remember_pwd_state"
    android:text="@string/lblagreeota"
    android:textColor="@color/black" />

  <WebView
    android:id="@+id/mandate_webview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/checkbox_agree_ota"
    android:layout_alignParentTop="true"
    android:layout_marginBottom="10dip" />

</RelativeLayout>